kubernetes/cluster-0/apps/media/photoprism/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoprism
  namespace: media
spec:
  selector:
    matchLabels:
      app: photoprism
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        app: photoprism
    spec:
      containers:
        - name: photoprism
          image: docker.io/photoprism/photoprism:latest@sha256:295ddeb167cdfb21462d1e0c08fcbd40ded17639905a999fc788e3f833c52ed1
          imagePullPolicy: IfNotPresent
          workingDir: /photoprism
          tty: true
          resources:
            requests:
              cpu: 100m
              nvidia.com/gpu: 1
              memory: 4282M
            limits:
              cpu: 2000m
              nvidia.com/gpu: 1
              memory: 12G
          ports:
            - name: http
              containerPort: 2342
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
          volumeMounts:
            - name: photoprism-storage
              mountPath: /photoprism/storage
            - name: nfs-originals
              mountPath: /photoprism/originals
            - name: nfs-import
              mountPath: /photoprism/import
      volumes:
        - name: photoprism-storage
          persistentVolumeClaim:
            claimName: photoprism-storage
        - name: nfs-originals
          nfs:
            server: nas.jahanson.tech
            path: /volume1/Media/Photos
        - name: nfs-import
          nfs:
            server: nas.jahanson.tech
            path: /volume1/Media/temp
      runtimeClassName: nvidia
      nodeSelector:
        feature.node.kubernetes.io/pci-0300_10de.present: "true"
        modernnvidia: "true"
