kubernetes/cluster-0/apps/media/photoprism/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  labels:
    app: photoprism
spec:
  type: ClusterIP
  ports:
    - port: 2342
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: photoprism
