kubernetes/cluster-0/apps/media/photoprism/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photoprism
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &host photoprism.hsn.dev
  rules:
    - host: *host
      http:
        paths:
          - backend:
              service:
                name: photoprism
                port:
                  number: 2342
            path: /
            pathType: Prefix
